[gd_scene load_steps=7 format=2]

[ext_resource path="res://Particles/Smoke/Smoke.gd" type="Script" id=1]
[ext_resource path="res://Particles/Smoke/smoke1.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 100 )
initial_velocity = 4.0
angular_velocity = 2.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2
scale_random = 1.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 100 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 8.00095
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2
scale_random = 1.0

[sub_resource type="OccluderPolygon2D" id=4]
cull_mode = 1
polygon = PoolVector2Array( -9.71745, -35.2525, -9.06948, -35.5765, -8.34053, -35.6575, -7.2876, -35.9815, -6.47765, -36.0625, -5.34372, -36.2245, -4.29078, -36.3055, -2.67088, -36.3055, -1.77994, -36.6295, -0.888996, -36.7105, 0.082943, -36.8724, 1.21687, -36.7105, 3.24174, -36.3865, 4.86164, -36.1435, 6.15757, -35.8195, 7.61547, -35.6575, 8.7494, -35.3335, 9.96433, -35.2525, 11.3412, -34.9286, 12.1512, -34.6046, 13.2851, -34.1186, 14.1761, -33.7946, 14.986, -33.3897, 16.2819, -33.0657, 17.3349, -32.7417, 17.9018, -32.1747, 19.0358, -31.7698, 19.8457, -31.3648, 20.6557, -30.7168, 21.1416, -30.3119, 21.7896, -29.5829, 22.7615, -28.8539, 23.4095, -28.125, 24.2194, -27.558, 25.0294, -27.153, 25.7583, -26.4241, 26.1633, -26.1001, 26.8923, -25.2902, 27.4592, -24.5612, 28.0262, -23.7513, 28.5932, -22.9413, 29.0791, -22.4553, 29.4841, -21.8074, 29.7271, -21.3214, 30.1321, -20.7544, 30.699, -20.2685, 31.266, -19.5395, 31.509, -18.7296, 31.914, -17.9196, 32.3999, -17.1907, 32.7239, -16.3807, 32.9669, -15.6518, 33.4529, -14.6798, 34.1008, -13.7079, 34.4248, -12.7359, 34.6678, -11.521, 34.9918, -10.2251, 35.3158, -9.49615, 35.6397, -8.6862, 35.8017, -7.63327, 35.9637, -6.82331, 36.1257, -5.77038, 36.2877, -4.39347, 36.3687, -3.09755, 36.6927, -1.72063, 36.6927, -0.505707, 36.6117, 1.27617, 36.6117, 2.3291, 36.4497, 3.30104, 36.2067, 4.35397, 36.2067, 5.4879, 35.8827, 7.1078, 35.7207, 8.07974, 35.5588, 8.88969, 35.3968, 9.69964, 34.9918, 10.9956, 34.6678, 12.2105, 34.1818, 13.8304, 33.4529, 14.5593, 33.1289, 15.6933, 32.7239, 16.5842, 32.238, 17.6371, 31.752, 19.0141, 31.023, 19.743, 30.2131, 20.9579, 29.4031, 22.4968, 28.3502, 23.5498, 27.1353, 24.9267, 26.4063, 25.8986, 25.7584, 26.7086, 24.6244, 27.4375, 23.8145, 28.2475, 22.5186, 29.3004, 21.3846, 30.0294, 20.1697, 30.6773, 18.7928, 31.4063, 17.4969, 31.9733, 15.877, 32.6212, 14.5001, 33.4312, 13.6901, 33.9171, 12.2322, 34.4031, 11.5032, 34.8891, 10.7743, 35.2131, 9.64036, 35.375, 8.42543, 35.942, 7.04852, 36.266, 5.99558, 36.428, 4.61867, 36.347, 3.72772, 36.59, 2.10783, 36.428, 0.892899, 36.833, 0.163948, 36.833, -1.61794, 36.752, -3.39983, 36.347, -5.01974, 36.104, -6.07267, 35.942, -7.36859, 35.618, -8.7455, 35.294, -10.0414, 34.9701, -11.4183, 34.7271, -12.3903, 34.3221, -13.5242, 34.0791, -14.4961, 33.6741, -15.4681, 33.3502, -16.683, 32.6212, -17.6549, 32.0542, -18.3839, 31.6493, -19.2748, 31.2443, -20.2468, 30.6773, -21.2997, 29.9484, -22.1097, 29.3004, -23.1626, 28.6525, -24.1345, 27.8425, -24.9445, 27.0326, -25.6734, 26.2226, -26.4024, 25.4937, -27.2123, 24.6027, -27.9413, 23.5498, -28.9132, 22.4158, -29.7232, 21.3629, -30.6141, 20.31, -31.1811, 19.743, -31.5861, 18.3661, -32.072, 17.7181, -32.639, 16.7462, -33.125, 15.7743, -33.7729, 14.2354, -34.5019, 12.6155, -34.8259, 11.1576, -35.3119, 9.94263, -35.7978, 8.7277, -36.1218, 7.99875, -36.2028, 6.62183, -36.3648, 5.64989, -36.4458, 4.51596, -36.4458, 3.13905, -36.4458, 1.76214, -36.4458, 0.871191, -36.4458, -0.0197525, -36.6888, -0.991688, -36.7698, -2.20661, -36.7698, -3.17855, -36.7698, -3.9885, -36.6078, -4.96044, -36.2838, -6.33735, -35.6358, -8.20024, -35.4738, -9.41516, -34.9879, -10.7111, -34.7449, -12.007, -34.1779, -13.4649, -33.449, -14.8418, -32.963, -16.1377, -32.558, -17.2717, -32.153, -18.0006, -31.5861, -18.9726, -30.8571, -20.1065, -30.4522, -20.9164, -29.7232, -21.3214, -28.8323, -22.6173, -28.0223, -23.4273, -27.3743, -24.4802, -26.6454, -25.2092, -25.1875, -26.6671, -24.6205, -27.396, -23.4056, -28.125, -22.5146, -28.7729, -21.3807, -29.6639, -20.4898, -30.3118, -19.5988, -31.1218, -18.7889, -31.5268, -17.493, -32.1747, -16.359, -32.9037, -15.5491, -33.3897, -14.6581, -33.7946, -13.8482, -34.1186, -12.8763, -34.4426, -11.9043, -34.5236, -11.0944, -34.9286 )

[node name="Smoke" type="StaticBody2D"]
material = SubResource( 1 )
z_index = 100
z_as_relative = false
script = ExtResource( 1 )

[node name="StartSmoke" type="Particles2D" parent="."]
use_parent_material = true
emitting = false
amount = 200
lifetime = 11.0
one_shot = true
fixed_fps = 144
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="MiddleSmoke" type="Particles2D" parent="."]
show_behind_parent = true
use_parent_material = true
emitting = false
amount = 200
lifetime = 22.0
one_shot = true
explosiveness = 1.0
fixed_fps = 144
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
show_behind_parent = true
light_mask = 3
occluder = SubResource( 4 )
light_mask = 3

[node name="LifeTime" type="Timer" parent="."]
process_mode = 0
wait_time = 33.0
one_shot = true

[node name="StartMiddle" type="Timer" parent="."]
process_mode = 0
wait_time = 11.0
one_shot = true

[node name="IncFirstOccluder" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="timeout" from="StartMiddle" to="." method="_on_StartMiddle_timeout"]
[connection signal="timeout" from="IncFirstOccluder" to="." method="_on_IncFirstOccluder_timeout"]
